fix var calc wrapping

--- a/src/sections/Chat/Messages/Message/Reply/index.module.scss
+++ b/src/sections/Chat/Messages/Message/Reply/index.module.scss
@@ -7,7 +7,7 @@ $bar-width: 4px;
   display: block;
   margin: 0.33rem 0;
   padding: $bar-width 0 $bar-width 1em;
-  padding-left: calc(1em + $bar-width);
+  padding-left: calc(1em + #{$bar-width});
   border-radius: 0.2em;
 
   color: var(--color-text) !important;
